SERVER-36296: Constrain "Slow WT transaction" log to interesting cases.